# todo_manager

./: .gitignore  D1_v2_requirements.md  D2_CLI_requirements.md  D3_GUI_requirements.md  LICENSE  README.md  __init__.py  build_cli.spec  build_gui.spec  design_document.md  overview.md  prototype.html  pyproject.toml
.github/: pull_request_template.md
cli/: __init__.py  __main__.py  commands.py  contract.py  display.py  main.py
docs/: cli_contract.md  design_system_v2.md  dev_setup.md  gui_flicker_angle_d3d9_experiment_2026-05-27.md  gui_flicker_angle_gl_experiment_2026-05-27.md  gui_flicker_direct_composition_experiment_2026-05-27.md  gui_flicker_investigation_2026-05-26.md  gui_flicker_vulkan_angle_experiment_2026-05-27.md  gui_ux_redesign.md  m0_validation_report.md  m1_validation_report.md  m3_validation_report.md  m4_validation_report.md  m5_react_frontend_validation_report.md  m5_validation_report.md  m6_5_react_desktop_architecture.md  m6_5_validation_report.md  m6_6_application_icon_validation_report.md  m6_validation_report.md  m7_5_validation_report.md  m7_validation_report.md  milestone_plan_reorg_cross_platform_release.md  platform_support.md  react_gui_cutover_validation_report.md  release_checklist.md  release_process.md  requirements_reorg_cross_platform_release.md  source_audit_report.md  test_plan_reorg_cross_platform_release.md  todo_gui_issue_triage_2026-05-25.md
engine/: __init__.py  calendar_utils.py  models.py  platform_paths.py  storage.py  task_manager.py
frontend/: README.md  eslint.config.mjs  next.config.mjs  package-lock.json  (+2 more)
(+85 files in other folders)
